2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : remove BASE_DEPENDENCIES LIBS and CFLAGS and
	expose more specific versions for glue building.
	* */glue/Makefile.am : use more specific versions of LIBS and CFLAGS
	to reduce the ldd footprint.

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* configure.in : AC_SUBST an API_VERSION=1.0.0.0 for the 
	AssemblyVersionAttributes.
	* */AssemblyInfo.cs.in : s/@VERSION@/@API_VERSION@/

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* */AssemblyInfo.cs.in : s/@VERSION@.0.0/@VERSION@/

2004-04-30  Mike Kestner  <mkestner@ximian.com>

	* sample/gconf/* : break System.Drawing dependency.

2004-04-30  Owen Fraser-Green  <owen@discobabe.net>

	* gconf/tools/gconfsharp-schemagen.in : fixed variables
	* sources/Makefile.am : remove reference to old gst target

2004-04-30  Erik Dasque  <edasque@ximian.com>

	* gtk/Calendar.custom : new Date property with setter

2004-04-29  Mike Kestner  <mkestner@ximian.com>

	* mapdllnames.pl : remove unneccessary script

2004-04-29  Mike Kestner  <mkestner@ximian.com>

	* gst/* : kill.  it's been spun out the the gst-sharp module.
	* sources/Makefile.am : remove gst source download target.
	* sources/gtk-sharp-sources.xml : remove gst nodes.

2004-04-29  Mike Kestner  <mkestner@ximian.com>

	* configure.in : expand the AssemblyInfo.cs files.
	* */AssemblyInfo.cs.in : new assembly info files.
	* */Makefile.am : dist, make, and clean assmbly info files.

2004-04-29  Owen Fraser-Green  <owen@discobabe.net>

	* generator/ClassBase.cs: added base case to Parent to avoid
	infinite recursion.
	* glib/Marshaller.cs: changed SizeOf(typeof's to int and long
	instead of string.

2004-04-29  Duncan Mak  <duncan@ximian.com>

	* vte/vte-sharp.dll.config.in: Removed extra </configuration>
	element.
	
2004-04-29  Owen Fraser-Green  <owen@discobabe.net>

	* gnome/CanvasGroup.custom : added public constructor.

2004-04-29  Mike Kestner  <mkestner@ximian.com>
