@@ -3,4 +3,4 @@ using System.Runtime.CompilerServices;
 
 [assembly:AssemblyVersion("@API_VERSION@")]
 [assembly:AssemblyDelaySign(true)]
-[assembly:AssemblyKeyFile("../gtk-sharp.pub")]
+[assembly:AssemblyKeyFile("gtk-sharp.pub")]
