@@ -89,8 +89,14 @@ if test "x$CSC" = "xno" ; then
 	AC_MSG_ERROR([No $CS compiler found])
 fi
 
+AC_PATH_PROG(GACUTIL, gacutil, no)
+if test "x$GACUTIL" = "xno" ; then
+	AC_MSG_ERROR([No gacutil tool found])
+fi
+
 AC_SUBST(RUNTIME)
 AC_SUBST(CSC)
+AC_SUBST(GACUTIL)
 AC_SUBST(LIB_PREFIX)
 AC_SUBST(LIB_SUFFIX)
 
