@@ -1,17 +1,16 @@
 if ENABLE_GNOME
-ASSEMBLY = gconf-sharp.dll
-TARGETS = $(ASSEMBLY) $(ASSEMBLY).config
+TARGET = $(ASSEMBLY) $(ASSEMBLY).config
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = gconf-sharp.pc
 else
-ASSEMBLY = 
-TARGETS = 
+TARGET = 
 endif
-assemblydir = $(libdir)
-assembly_DATA = $(TARGETS)
-CLEANFILES = $(ASSEMBLY)
-
+noinst_DATA = $(TARGET)
+CLEANFILES = $(ASSEMBLY) gtk-sharp.pub
 DISTCLEANFILES = gconf-sharp.pc $(ASSEMBLY).config AssemblyInfo.cs
+
+ASSEMBLY = $(ASSEMBLY_NAME).dll
+ASSEMBLY_NAME = gconf-sharp
 
 EXTRA_DIST =			\
 	$(sources)		\
@@ -35,6 +34,21 @@ sources = 			\
 
 build_sources = $(addprefix $(srcdir)/, $(sources)) AssemblyInfo.cs
 
-$(ASSEMBLY): $(build_sources)
+gtk-sharp.pub: $(top_srcdir)/gtk-sharp.pub
+	cp $(top_srcdir)/gtk-sharp.pub .
+
+$(ASSEMBLY): $(build_sources) gtk-sharp.pub
 	$(CSC) /out:$(ASSEMBLY) /target:library $(references) $(build_sources)
+
+install-data-local:
+	@if test -n '$(TARGET)'; then						\
+	  echo "$(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir)";	\
+	  $(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir) || exit 1;	\
+	fi
+
+uninstall-local:
+	@if test -n '$(TARGET)'; then						\
+	  echo "$(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir)";	\
+	  $(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir) || exit 1;	\
+	fi
 
