@@ -1,9 +1,9 @@
 SUBDIRS = glue
 
-ASSEMBLY = glib-sharp.dll
-assemblydir = $(libdir)
-assembly_DATA = $(ASSEMBLY) $(ASSEMBLY).config
-CLEANFILES = $(ASSEMBLY)
+ASSEMBLY = $(ASSEMBLY_NAME).dll
+ASSEMBLY_NAME = glib-sharp
+noinst_DATA = $(ASSEMBLY) $(ASSEMBLY).config
+CLEANFILES = $(ASSEMBLY) gtk-sharp.pub
 DISTCLEANFILES = $(ASSEMBLY).config AssemblyInfo.cs
 
 references = 
@@ -49,9 +49,20 @@ dist_sources = $(sources)
 EXTRA_DIST =				\
 	$(dist_sources)			\
 	$(ASSEMBLY).config.in		\
-	AssemblyInfo.cs.in	\
+	AssemblyInfo.cs.in		\
 	makefile.win32
 
-$(ASSEMBLY): $(build_sources)
+gtk-sharp.pub: $(top_srcdir)/gtk-sharp.pub
+	cp $(top_srcdir)/gtk-sharp.pub .
+
+$(ASSEMBLY): $(build_sources) gtk-sharp.pub
 	$(CSC) /out:$(ASSEMBLY) /target:library $(references) $(build_sources)
+
+install-data-local:
+	echo "$(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir)";	\
+	$(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir) || exit 1;
+
+uninstall-local:
+	echo "$(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir)";	\
+	$(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir) || exit 1;
 
