@@ -5,11 +5,10 @@ ASSEMBLY_NAME = pango-sharp
 references = /r:../glib/glib-sharp.dll
 
 ASSEMBLY = $(ASSEMBLY_NAME).dll
-assemblydir = $(libdir)
 gapidir = $(datadir)/gapi
-assembly_DATA = $(ASSEMBLY) $(ASSEMBLY).config
+noinst_DATA = $(ASSEMBLY) $(ASSEMBLY).config
 gapi_DATA = $(API)
-CLEANFILES = $(ASSEMBLY) generated-stamp generated/*.cs $(API)
+CLEANFILES = $(ASSEMBLY) generated-stamp generated/*.cs $(API) gtk-sharp.pub
 DISTCLEANFILES = $(ASSEMBLY).config AssemblyInfo.cs
 
 sources = 		\
@@ -45,6 +44,17 @@ generated-stamp: $(API) ../generator/gapi_codegen.exe $(build_customs)
 	--outdir=generated --customdir=$(srcdir) --assembly-name=$(ASSEMBLY_NAME) \
 	&& touch generated-stamp
 
-$(ASSEMBLY): $(build_sources) generated-stamp
+gtk-sharp.pub: $(top_srcdir)/gtk-sharp.pub
+	cp $(top_srcdir)/gtk-sharp.pub .
+
+$(ASSEMBLY): $(build_sources) generated-stamp gtk-sharp.pub
 	$(CSC) --unsafe /out:$(ASSEMBLY) /target:library $(references) $(build_sources) generated/*.cs
+
+install-data-local:
+	echo "$(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir)";	\
+	$(GACUTIL) /i $(ASSEMBLY) /f /root $(DESTDIR)$(libdir) || exit 1;
+
+uninstall-local:
+	echo "$(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir)";	\
+	$(GACUTIL) /u $(ASSEMBLY_NAME) /root $(DESTDIR)$(libdir) || exit 1;
 
