@@ -1,5 +1,13 @@
 2004-04-30  Mike Kestner  <mkestner@ximian.com>
 
+	* configure.in : lookup gacutil and error out if not found.
+	* */Makefile.am : add install-data-local and uninstall-local targets
+	for GAC installation.  Add gtk-sharp.pub target to cp the key in for
+	distcheck.
+	* */AssemblyInfo.cs.in : remove ../ from key path for VPATH build.
+
+2004-04-30  Mike Kestner  <mkestner@ximian.com>
+
 	* configure.in : remove BASE_DEPENDENCIES LIBS and CFLAGS and
 	expose more specific versions for glue building.
 	* */glue/Makefile.am : use more specific versions of LIBS and CFLAGS
